source url updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Canada Sport Betting</title>
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
@@ -14,7 +14,7 @@
       <div>
         <details data-display="mobile">
           <summary id="hamburger">
-            <img src="/img/hamburger_menu.png" />
+            <img src="img/hamburger_menu.png" />
           </summary>
           <nav>
             <a href="#">SPORTSBOOKS</a>
@@ -26,7 +26,7 @@
           </nav>
         </details>
         <a id="logo" href="#">
-          <img src="/img/logo.png" alt="Canada Sports Betting">
+          <img src="img/logo.png" alt="Canada Sports Betting">
         </a>
         <nav data-display="large">
           <a href="#">SPORTSBOOKS</a>
@@ -45,7 +45,7 @@
           Sort Alphabetically
         </button>
         <h1>
-          <img src="/img/flag.png" />
+          <img src="img/flag.png" />
           BEST SPORTS BETTING SITES
         </h1>
         <input name="change-view" type="checkbox" data-display="large" />
@@ -55,14 +55,14 @@
             <div class="info">
               <h2>1</h2>
               <a href="/betting-url">
-                <img src="/img/logos/sportsinteraction.png" />
+                <img src="img/logos/sportsinteraction.png" />
               </a>
               <span class="stars" data-display="large">
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
               </span>
               <a href="/review-link" class="review-link">
                 Review
@@ -79,7 +79,7 @@
               </p>
               <button>
                 <span data-display="large">Play Now</span>
-                <img src="/img/arrow.png" />
+                <img src="img/arrow.png" />
               </button>
             </div>
           </li>
@@ -88,14 +88,14 @@
             <div class="info">
               <h2>2</h2>
               <a href="/betting-url">
-                <img src="/img/logos/powerplay.png" />
+                <img src="img/logos/powerplay.png" />
               </a>
               <span class="stars" data-display="large">
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
               </span>
               <a href="/review-link" class="review-link">
                 Review
@@ -112,7 +112,7 @@
               </p>
               <button>
                 <span data-display="large">Play Now</span>
-                <img src="/img/arrow.png" />
+                <img src="img/arrow.png" />
               </button>
             </div>
           </li>
@@ -121,14 +121,14 @@
             <div class="info">
               <h2>3</h2>
               <a href="/betting-url">
-                <img src="/img/logos/betway.png" />
+                <img src="img/logos/betway.png" />
               </a>
               <span class="stars" data-display="large">
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
               </span>
               <a href="/review-link" class="review-link">
                 Review
@@ -145,7 +145,7 @@
               </p>
               <button>
                 <span data-display="large">Play Now</span>
-                <img src="/img/arrow.png" />
+                <img src="img/arrow.png" />
               </button>
             </div>
           </li>
@@ -154,14 +154,14 @@
             <div class="info">
               <h2>4</h2>
               <a href="/betting-url">
-                <img src="/img/logos/spinsports.png" />
+                <img src="img/logos/spinsports.png" />
               </a>
               <span class="stars" data-display="large">
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
               </span>
               <a href="/review-link" class="review-link">
                 Review
@@ -178,7 +178,7 @@
               </p>
               <button>
                 <span data-display="large">Play Now</span>
-                <img src="/img/arrow.png" />
+                <img src="img/arrow.png" />
               </button>
             </div>
           </li>
@@ -187,14 +187,14 @@
             <div class="info">
               <h2>5</h2>
               <a href="/betting-url">
-                <img src="/img/logos/bodog.png" />
+                <img src="img/logos/bodog.png" />
               </a>
               <span class="stars" data-display="large">
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
-                <img src="/img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
+                <img src="img/star.png" />
               </span>
               <a href="/review-link" class="review-link">
                 Review
@@ -211,7 +211,7 @@
               </p>
               <button>
                 <span data-display="large">Play Now</span>
-                <img src="/img/arrow.png" />
+                <img src="img/arrow.png" />
               </button>
             </div>
           </li>
@@ -221,10 +221,10 @@
     </main>
 
     <footer data-display="large">
-      <img src="/img/footer.png" />
+      <img src="img/footer.png" />
     </footer>
 
-    <script src="/sort.js" charset="utf-8"></script>
+    <script src="sort.js" charset="utf-8"></script>
 
   </body>
 </html>
